# moe-measure

./: .gitignore  HANDOFF-CONTEXT.md  README.md  RUNNING-ICE.md  RUNNING-PACE.md  docker-compose.yml  experiment-audit.md  expt-2.txt  expt-catalog.md  progress-report.md  pyproject.toml  requirements.txt  runs  runs_table.md
configs/: study.example.yaml  study.ncu-profile.yaml  study.pace.a100.yaml  study.pace.h100.deepep.yaml  study.qwen3_30b_a3b.full-onenode-limited.yaml  study.qwen3_30b_a3b.full-onenode.yaml  study.qwen3_30b_a3b.full-twonode.yaml  study.qwen3_30b_a3b.initial.yaml  study.qwen3_30b_a3b.medium-threenode.yaml  study.qwen3_30b_a3b.medium.yaml  study.routing-modes.allgather.yaml
examples/: run_quantized_qwen.py  run_slurm.sbatch
expt-3-deeptest/: study-catalog.txt
expt1/: progress-report.md
expt2/: study-catalog.txt
expt2.5/: study-catalog.txt
expt25_report/: build_data.py  build_pdf.py  checks2.py  combined.csv  explore.py  explore2.py  expt25_paper.md  figs_a.py  figs_b.py  figs_breakdown.py  final_numbers.py  findings.py  verify_paper.py
moe-breakdown/: Dockerfile  RUNNING-ICE.md  RUNNING.md
scripts/: _run_study.sh  aggregate_results.py  backfill_derived_columns.py  bootstrap_uv_env.sh  ice_qwen3_first_run.sh  ice_qwen3_full_onenode_limited_run.sh  ice_qwen3_full_onenode_run.sh  ice_qwen3_full_twonode_limited_run.sh  ice_qwen3_medium_run.sh  ice_qwen3_medium_threenode_run.sh  profile_qwen3_30b_a3b_two_conditions.sh  run_breakdown.py  setup_ice_env.sh  submit_qwen3_30b_a3b_initial.sh  submit_slurm_study.py  wrap_ncu.sh  wrap_nsys.sh
(+91 files in other folders)
