[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fused-moe-kernel-study"
version = "0.1.0"
description = "Direct-kernel characterization framework for vLLM fused MoE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
